--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 evaluate~=0.4.0
 datasets~=2.12.0
 transformers~=4.29.2
-torch
-scikit-learn
+torch~=2.0.1
+scikit-learn~=1.2.2
 numpy~=1.24.3
-wandb
-accelerate
+wandb~=0.15.3
+accelerate~=0.19.0
